# dj-rag-db

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scribe/: apps.py  chunkers.py  conf.py  models.py  schema.py  scribe_milvus.py  splitters.py  utils.py
scribe/backends/: __init__.py  base.py  milvus_backend.py  pgvector_backend.py
scribe/chunking/: basechunker.py  imagechunker.py  markdownchunker.py  propositionchunker.py  statisticalchunker.py
scribe/docs/: README.md
scribe/management/commands/: backfill_chunks_from_milvus.py  rebuild_milvus_from_postgres.py  reindex_documents.py
scribe/migrations/: 0001_initial.py  0002_tsvector_trigger.py
scribe/processing/: contextualizer.py
scribe/retrieval/: __init__.py  adaptive_cutoff.py
scribe/tests/: factories.py  mocks.py  test_scribe_milvus.py
scribe/tests/integration/: test_pdf_processor.py  test_pgvector_search.py
scribe/tests/unit/: test_adaptive_cutoff.py  test_app_config.py  test_apps_peer_check.py  test_backend_factory.py  test_chunk_id_uniqueness_regression.py  test_chunk_size_config.py  test_chunking.py  test_conf.py  test_contextualizer.py  test_document_chunk_model.py  test_management_commands.py  test_milvus_backend.py  test_no_legacy_milvus.py  test_ocr_image_extraction_regression.py  test_pgvector_backend.py  test_scribe_init.py  test_scribe_service.py  test_statistical_chunker_token_limit.py  test_table_repair.py
scribe/tools/: document_to_pdf.py  md_regex_splitter.py  ocr_processor.py  pdf_processor.py
