[tool.poetry]
name = "dj-rag-db"
version = "0.1.0"
description = "RAG document indexing and hybrid search for Django: statistical/markdown/image chunking, contextual retrieval, pgvector and Milvus backends, OCR/PDF processing pipeline (app package `scribe`)."
authors = ["Stefan Ostrowski <ostrowski@addvendo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "scribe" }]
include = [
    { path = "scribe/docs/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
django = "^5"
pydantic = "^2"
numpy = "^2"
scipy = "^1"
pgvector = "^0.4"
pymilvus = "^2.6"
tiktoken = ">=0.12,<1"
openai = "^2"
pymupdf = "^1.26"
pymupdf4llm = ">=0.2,<1"
pypandoc = "^1.16"
regex = "^2025"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
