[project]
name = "dj-rag-db"
version = "0.1.0"
description = "RAG document indexing and hybrid search for Django: statistical/markdown/image chunking, contextual retrieval, pgvector and Milvus backends, OCR/PDF processing pipeline (app package `scribe`)."
authors = [{ name = "Stefan Ostrowski", email = "ostrowski@addvendo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5,<6",
    "pydantic>=2,<3",
    "numpy>=2,<3",
    "scipy>=1,<2",
    "pgvector>=0.4,<0.5",
    "pymilvus>=2.6,<3",
    "tiktoken>=0.12,<1",
    "openai>=2,<3",
    "pymupdf>=1.26,<2",
    "pymupdf4llm>=0.2,<1",
    "pypandoc>=1.16,<2",
    "regex>=2025,<2026",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scribe"]
